--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -3,6 +3,8 @@
 
 {% block title %} Cart Detail {% endblock title %}
 
+{% block page %} Cart {% endblock page %}
+
 {% block content %}
 
 <div class="Shopping-cart-area pt-60 pb-60">
