--- a/templates/shop/detail.html
+++ b/templates/shop/detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block title %} {{ product.name }} Detail {% endblock title %}
 
+{% block page %} About Product {% endblock page %}
+
 {% block content %}
 <div class="content-wraper">
     <div class="container">
