--- a/templates/shop/list.html
+++ b/templates/shop/list.html
@@ -3,7 +3,7 @@
 {% block title %} Shop Four Column || limupa - Digital Products Store eCommerce Bootstrap 4 Template {% endblock title %}
 
 {% block content %}
-
+{% block page %} Products {% endblock page %}
 <div class="content-wraper pt-60 pb-60">
     <div class="container">
         <div class="row">
