--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,9 +7,11 @@
 {% block content %}
 
 <div class="contact-main-page mt-60 mb-40 mb-md-40 mb-sm-40 mb-xs-40">
+    {% comment %}
     <div class="container mb-60">
         <div id="google-map"></div>
     </div>
+    {% endcomment %}
     <div class="container">
         <div class="row">
             <div class="col-lg-5 offset-lg-1 col-md-12 order-1 order-lg-2">
