--- a/templates/contact.html
+++ b/templates/contact.html
@@ -56,7 +56,7 @@
                                 <textarea name="contactMessage" id="contactMessage" ></textarea>
                             </div>
                             <div class="form-group">
-                                <button type="submit" value="submit" id="submit" class="li-btn-3" name="submit">send</button>
+                                <a href="{% url 'shop:product_list' %}" type="submit" value="submit" id="submit" class="li-btn-3" name="submit">Send</a>
                             </div>
                         </form>
                     </div>
