--- a/templates/base.html
+++ b/templates/base.html
@@ -82,8 +82,8 @@
                                             <div class="setting ht-setting">
                                                 <ul class="ht-setting-list">
                                                     <li><a href="login-register.html">My Account</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
-                                                    <li><a href="{% url 'others:signin' %}">Sign In</a></li>
+                                                    <li><a href="{% url 'others:checkout' %}">Checkout</a></li>
+                                                    <li><a href="{% url 'accounts:register' %}">Sign In</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -313,7 +313,7 @@
                                                     <li><a href="shop-left-sidebar.html">Shop Page Layout</a>
                                                         <ul>
                                                             <li><a href="shop-3-column.html">Shop 3 Column</a></li>
-                                                            <li class="active"><a href="shop-4-column.html">Shop 4 Column</a></li>
+                                                            <li class="active"><a href="{% url 'shop:product_list' %}">Shop 4 Column</a></li>
                                                             <li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
                                                             <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
                                                             <li><a href="shop-list.html">Shop List</a></li>
@@ -407,7 +407,7 @@
                                                     </li>
                                                     <li><a href="index.html">Other Pages 2</a>
                                                         <ul>
-                                                            <li><a href="{% url 'others:contact' %}">Contact</a></li>
+                                                            <li><a href="#">Contact</a></li>
                                                             <li><a href="about-us.html">About Us</a></li>
                                                             <li><a href="faq.html">FAQ</a></li>
                                                             <li><a href="404.html">404 Error</a></li>
@@ -415,7 +415,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="about-us.html">About Us</a></li>
+                                            <li><a href="{% url 'others:about_us' %}">About Us</a></li>
                                             <li><a href="{% url 'others:contact' %}">Contact</a></li>
                                             <li><a href="shop-left-sidebar.html">Smartwatch</a></li>
                                             <li><a href="shop-left-sidebar.html">Accessories</a></li>
