--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -11,6 +11,7 @@
             <div class="col-12">
                 <div class="coupon-accordion">
                     <!--Accordion Start-->
+                    {% comment %}
                     <h3>Returning customer? <span id="showlogin">Click here to login</span></h3>
                     <div id="checkout-login" class="coupon-content">
                         <div class="coupon-info">
@@ -48,6 +49,7 @@
                             </form>
                         </div>
                     </div>
+                    {% endcomment %}
                     <!--Accordion End-->
                 </div>
             </div>
