--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                                                 <ul class="ht-setting-list">
                                                     <li><a href="login-register.html">My Account</a></li>
                                                     <li><a href="{% url 'others:checkout' %}">Checkout</a></li>
-                                                    <li><a href="{% url 'accounts:register' %}">Sign In</a></li>
+                                                    <li><a href="{% url 'registration:register' %}">Sign In</a></li>
                                                 </ul>
                                             </div>
                                         </li>
