--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,7 +10,8 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb-30">
                 <!-- Login Form s-->
-                <form action="#" >
+                <form action="{% url 'registration:register' %}" method="post">
+                    {% csrf_token %}
                     <div class="login-form">
                         <h4 class="login-title">Login</h4>
                         <div class="row">
@@ -34,43 +35,47 @@
                             <div class="lco-md-12">
                                 {% comment %}
                                 <button class="register-button mt-0">Login</button>
-                                {% endcomment %}
                                 <a href="{% url 'shop:product_list' %}" class="register-button mt-0">Login</a>
+                                {% endcomment %}
+                                <input type="submit" value="Login">
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xs-12">
-                <form action="#">
+                <form action="{% url 'registration:register' %}" method="post">
+                    {% csrf_token %}
                     <div class="login-form">
                         <h4 class="login-title">Register</h4>
                         <div class="row">
                             <div class="col-md-6 col-12 mb-20">
                                 <label>First Name</label>
-                                <input class="mb-0" type="text" placeholder="First Name">
+                                <input class="mb-0" type="text" name="full_name" placeholder="First Name">
                             </div>
                             <div class="col-md-6 col-12 mb-20">
                                 <label>Last Name</label>
-                                <input class="mb-0" type="text" placeholder="Last Name">
+                                <input class="mb-0" type="text" name="last_name" placeholder="Last Name">
                             </div>
                             <div class="col-md-12 mb-20">
                                 <label>Email Address*</label>
-                                <input class="mb-0" type="email" placeholder="Email Address">
+                                <input class="mb-0" type="email" name="email" placeholder="Email Address">
                             </div>
                             <div class="col-md-6 mb-20">
                                 <label>Password</label>
-                                <input class="mb-0" type="password" placeholder="Password">
+                                <input class="mb-0" type="password" name="password" placeholder="Password">
                             </div>
                             <div class="col-md-6 mb-20">
                                 <label>Confirm Password</label>
-                                <input class="mb-0" type="password" placeholder="Confirm Password">
+                                <input class="mb-0" type="password" name="confirm_password" placeholder="Confirm Password">
                             </div>
                             <div class="col-12">
                                 {% comment %}
                                 <button class="register-button mt-0">Register</button>
+                                <a href="{% url 'registration:register' %}" class="register-button mt-0">Register</a>
                                 {% endcomment %}
-                                <a href="{% url 'shop:product_list' %}" class="register-button mt-0">Register</a>
+                                
+                                <input type="submit" value="Submit">
                             </div>
                         </div>
                     </div>
