--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,21 @@
                     <div class="container">
                         <div class="row">
                             <!-- Begin Header Top Left Area -->
+                                <div class="header-top-left">
+                                    <ul class="phone-wrap">
+                                        <li><a href="{% url 'registration:login' %}" class="btn btn-warning">Login</a></li>
+                                    </ul>
+                                </div>
+                          
+
+                                <div class="header-top-left">
+                                    <ul class="phone-wrap">
+                                        <li><a href="{% url 'registration:register' %}" class="btn btn-warning">Register</a></li>
+                                    </ul>
+                                </div>
+                          
+
+
                             <div class="col-lg-3 col-md-4">
                                 <div class="header-top-left">
                                     <ul class="phone-wrap">
@@ -71,6 +86,7 @@
                                     </ul>
                                 </div>
                             </div>
+                            
                             <!-- Header Top Left Area End Here -->
                             <!-- Begin Header Top Right Area -->
                             <div class="col-lg-9 col-md-8">
