--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,49 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Login / Register {% endblock title %}
+{% block title %} Register {% endblock title %}
 
-{% block page %} Login | Register {% endblock page %}
+{% block page %} Register {% endblock page %}
 
 {% block content %}
 <div class="page-section mb-60">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb-30">
-                <!-- Login Form s-->
-                <form action="{% url 'registration:register' %}" method="post">
-                    {% csrf_token %}
-                    <div class="login-form">
-                        <h4 class="login-title">Login</h4>
-                        <div class="row">
-                            <div class="col-md-12 col-12 mb-20">
-                                <label>Email Address*</label>
-                                <input class="mb-0" type="email" placeholder="Email Address">
-                            </div>
-                            <div class="col-12 mb-20">
-                                <label>Password</label>
-                                <input class="mb-0" type="password" placeholder="Password">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="check-box d-inline-block ml-0 ml-md-2 mt-10">
-                                    <input type="checkbox" id="remember_me">
-                                    <label for="remember_me">Remember me</label>
-                                </div>
-                            </div>
-                            <div class="col-md-4 mt-10 mb-20 text-left text-md-right">
-                                <a href="#"> Forgotten pasward?</a>
-                            </div>
-                            <div class="lco-md-12">
-                                {% comment %}
-                                <button class="register-button mt-0">Login</button>
-                                <a href="{% url 'shop:product_list' %}" class="register-button mt-0">Login</a>
-                                {% endcomment %}
-                                <input type="submit" value="Login">
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xs-12">
+            
+            <div class="col-sm-12 col-md-12 col-lg-6 col-xs-12 col-md-6 offset-3">
                 <form action="{% url 'registration:register' %}" method="post">
                     {% csrf_token %}
                     <div class="login-form">
