--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,20 +9,20 @@
 
 
 {% block content %}
-<div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb-30">
+<div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb-30 col-md-6 offset-3">
     <!-- Login Form s-->
-    <form action="{% url 'registration:register' %}" method="post">
+    <form action="{% url 'registration:login' %}" method="post">
         {% csrf_token %}
         <div class="login-form">
             <h4 class="login-title">Login</h4>
             <div class="row">
-                <div class="col-md-12 col-12 mb-20">
+                <div class="col-md-12 col-12 mb-20 ">
                     <label>Email Address*</label>
-                    <input class="mb-0" type="email" placeholder="Email Address">
+                    <input class="mb-0" type="email" placeholder="Email Address" name="email">
                 </div>
                 <div class="col-12 mb-20">
                     <label>Password</label>
-                    <input class="mb-0" type="password" placeholder="Password">
+                    <input class="mb-0" type="password" placeholder="Password" name="password">
                 </div>
                 <div class="col-md-8">
                     <div class="check-box d-inline-block ml-0 ml-md-2 mt-10">
