--- a/templates/base.html
+++ b/templates/base.html
@@ -81,14 +81,14 @@
                             {% else %}
                             <div class=" left header-top-left ">
                                     <ul class="phone-wrap">
-                                        <li><a href="{% url 'registration:login' %}" class="btn btn-warning">Login</a></li>
+                                        <li><a href="" class="btn btn-warning">Login</a></li>
                                     </ul>
                             </div>
                         
 
                                 <div class="header-top-left right">
                                     <ul class="phone-wrap">
-                                        <li><a href="{% url 'registration:register' %}" class="btn btn-warning">Register</a></li>
+                                        <li><a href="{% url 'registrations:register' %}" class="btn btn-warning">Register</a></li>
                                     </ul>
                                 </div>
                             {% endif %}
@@ -110,7 +110,7 @@
                                                 <ul class="ht-setting-list">
                                                     <li><a href="login-register.html">My Account</a></li>
                                                     <li><a href="{% url 'others:checkout' %}">Checkout</a></li>
-                                                    <li><a href="{% url 'registration:register' %}">Sign In</a></li>
+                                                    <li><a href="">Sign In</a></li>
                                                 </ul>
                                             </div>
                                         </li>
