--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,14 +10,14 @@
         <div class="row">
             
             <div class="col-sm-12 col-md-12 col-lg-6 col-xs-12 col-md-6 offset-3">
-                <form action="{% url 'registration:register' %}" method="post">
+                <form action="{% url 'registrations:register' %}" method="post">
                     {% csrf_token %}
                     <div class="login-form">
                         <h4 class="login-title">Register</h4>
                         <div class="row">
                             <div class="col-md-6 col-12 mb-20">
                                 <label>First Name</label>
-                                <input class="mb-0" type="text" name="full_name" placeholder="First Name">
+                                <input class="mb-0" type="text" name="first_name" placeholder="First Name">
                             </div>
                             <div class="col-md-6 col-12 mb-20">
                                 <label>Last Name</label>
@@ -33,7 +33,7 @@
                             </div>
                             <div class="col-md-6 mb-20">
                                 <label>Confirm Password</label>
-                                <input class="mb-0" type="password" name="confirm_password" placeholder="Confirm Password">
+                                <input class="mb-0" type="password" name="confirm" placeholder="Confirm Password">
                             </div>
                             <div class="col-12">
                                 {% comment %}
