--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                             {% else %}
                             <div class=" left header-top-left ">
                                     <ul class="phone-wrap">
-                                        <li><a href="" class="btn btn-warning">Login</a></li>
+                                        <li><a href="{% url 'registrations:login' %}" class="btn btn-warning">Login</a></li>
                                     </ul>
                             </div>
                         
