--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                             </div>
                             <div class="header-top-left right">
                                 <ul class="phone-wrap">
-                                    <li><a href="#" class="btn btn-warning">Log out</a></li>
+                                    <li><a href="{% url 'registrations:logout' %}" class="btn btn-warning">Log out</a></li>
                                 </ul>
                             </div>
                             {% else %}
